selfhost/test/typechecker/if/error_mismatch_bindingdecl.3.out
Error at %FILE_NAME%:1:35
Type mismatch
  |  val a: Int = if true 1 else Option.None_
                                       ^
Expected: Int
but instead found: <unknown>?
